Improve positioning of icon - issue is now they overlap if two in one spot

--- a/lessons/static/css/commonlesson.css
+++ b/lessons/static/css/commonlesson.css
@@ -389,6 +389,7 @@ html, body{
     margin-left: -20px;
     clear: left;
     display: block;
+    position: absolute;
 }
 
 .tiplink-tip a:link, .tiplink-tip a:visited {
